# Project-In-Linux

./: CMakeLists.txt  Script.sh  readme
Cpp files/: runMe.cpp
Headers/: libUtility.h  runMe.h
